# pin_picking

./: README.md
pin_picking/: CMakeLists.txt  package.xml
pin_picking/src/: pick_pins.cpp
